[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/menu.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/upheavtt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/scripts/main_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 256.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="ColorRect" parent="."]
margin_left = 9.0
margin_top = 61.0
margin_right = 112.0
margin_bottom = 134.0
color = Color( 0.152941, 0.180392, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Start" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 105.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Start"
flat = true
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 24.0
margin_right = 105.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
flat = true
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 48.0
margin_right = 105.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Buttons/VBoxContainer/Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="Buttons/VBoxContainer/Settings" to="." method="_on_Settings_button_up"]
[connection signal="button_up" from="Buttons/VBoxContainer/Quit" to="." method="_on_Quit_button_up"]
